@@ -18,15 +18,13 @@ public class BadWordFilterService {
     private BadWordFilterService() {
         // Initialize hardcoded list of bad words in English and French
         badWords = new HashSet<>();
-        
+
         // English bad words
         badWords.add("fuck");
         badWords.add("shit");
         badWords.add("asshole");
         badWords.add("bitch");
         badWords.add("bastard");
-        badWords.add("damn");
-        badWords.add("hell");
         badWords.add("crap");
         badWords.add("dick");
         badWords.add("piss");
@@ -35,7 +33,8 @@ public class BadWordFilterService {
         badWords.add("slut");
         badWords.add("idiot");
         badWords.add("stupid");
-        
+        badWords.add("imbecile");
+
         // French bad words
         badWords.add("putain");
         badWords.add("merde");
@@ -52,6 +51,15 @@ public class BadWordFilterService {
         badWords.add("baiser");
         badWords.add("trou du cul");
         badWords.add("nique");
+
+        // Compound phrases (often used together)
+        badWords.add("fuckyou");
+        badWords.add("fuckoff");
+        badWords.add("shutup");
+        badWords.add("bullshit");
+        badWords.add("horseshit");
+        badWords.add("motherfucker");
+        badWords.add("sonofabitch");
         
         // Create regex pattern for word boundaries and case insensitivity
         StringBuilder patternBuilder = new StringBuilder();
@@ -88,43 +96,92 @@ public class BadWordFilterService {
     
     /**
      * Checks if the given text contains any bad words.
-     * This check is case-insensitive and matches whole words.
-     * 
+     * Uses word boundary matching to avoid Scunthorpe problem (false positives like "hello" containing "hell").
+     *
      * @param text The text to check
      * @return true if bad words are found, false otherwise
      */
     public boolean containsBadWord(String text) {
-        if (text == null || text.trim().isEmpty()) {
-            return false;
-        }
+        if (text == null || text.isBlank()) return false;
         
-        Matcher matcher = wordPattern.matcher(text);
-        return matcher.find();
+        // Normalize: lowercase, replace number substitutions
+        String normalized = text.toLowerCase()
+            .replace("0", "o").replace("1", "i").replace("3", "e")
+            .replace("4", "a").replace("5", "s").replace("6", "g")
+            .replace("7", "t").replace("8", "b").replace("@", "a")
+            .replace("$", "s").replace("!", "i");
+
+        for (String word : badWords) {
+            String w = word.toLowerCase().trim();
+            
+            // Use word boundary so "hell" doesn't match "hello" or "helloo"
+            // but still matches "hell", "hell!", "hell?", "go to hell"
+            String boundaryPattern = "(?<![a-z])" + Pattern.quote(w) + "(?![a-z])";
+            if (Pattern.compile(boundaryPattern).matcher(normalized).find()) {
+                return true;
+            }
+
+            // Also check stretched version with word boundary
+            StringBuilder stretched = new StringBuilder("(?<![a-z])");
+            for (char c : w.toCharArray()) {
+                stretched.append(Pattern.quote(String.valueOf(c))).append("+");
+            }
+            stretched.append("(?![a-z])");
+            if (Pattern.compile(stretched.toString()).matcher(normalized).find()) {
+                return true;
+            }
+        }
+        return false;
     }
-    
+
     /**
      * Censors bad words in the given text by replacing them with ***.
-     * Preserves the original text structure and length.
-     * 
+     * Handles stretched words, skipped vowels, and number/symbol substitutions.
+     *
      * @param text The text to censor
      * @return The censored text with bad words replaced by ***
      */
     public String censor(String text) {
-        if (text == null || text.trim().isEmpty()) {
-            return text;
+        if (text == null || text.isBlank()) return text;
+        String result = text;
+
+        for (String word : badWords) {
+            // Pattern 1: stretched letters
+            StringBuilder stretchedPattern = new StringBuilder();
+            for (char c : word.toCharArray()) {
+                stretchedPattern.append(Pattern.quote(String.valueOf(c))).append("+");
+            }
+            result = result.replaceAll("(?i)" + stretchedPattern, "***");
+
+            // Pattern 2: skipped vowels
+            StringBuilder skippedPattern = new StringBuilder();
+            for (char c : word.toCharArray()) {
+                String escaped = Pattern.quote(String.valueOf(c));
+                if ("aeiou".indexOf(c) >= 0) {
+                    skippedPattern.append(escaped).append("*");
+                } else {
+                    skippedPattern.append(escaped).append("+");
+                }
+            }
+            result = result.replaceAll("(?i)" + skippedPattern, "***");
+
+            // Pattern 3: number/symbol substitutions
+            StringBuilder symbolPattern = new StringBuilder();
+            for (char c : word.toCharArray()) {
+                switch (c) {
+                    case 'a': symbolPattern.append("[a4@]"); break;
+                    case 'e': symbolPattern.append("[e3]"); break;
+                    case 'i': symbolPattern.append("[i1!]"); break;
+                    case 'o': symbolPattern.append("[o0]"); break;
+                    case 's': symbolPattern.append("[s5$]"); break;
+                    case 't': symbolPattern.append("[t+]"); break;
+                    case 'b': symbolPattern.append("[b8]"); break;
+                    default: symbolPattern.append(Pattern.quote(String.valueOf(c)));
+                }
+            }
+            result = result.replaceAll("(?i)" + symbolPattern, "***");
         }
-        
-        Matcher matcher = wordPattern.matcher(text);
-        StringBuffer result = new StringBuffer();
-        
-        while (matcher.find()) {
-            String badWord = matcher.group();
-            String censored = "*".repeat(badWord.length());
-            matcher.appendReplacement(result, censored);
-        }
-        matcher.appendTail(result);
-        
-        return result.toString();
+        return result;
     }
     
     /**
